products/src/main/java/com/example/products/ui/errors/PurchaseHistoryError.kt
package com.example.products.ui.errors

sealed class PurchaseHistoryError {
    object GetPurchaseHistoryError : PurchaseHistoryError()
}